forge config: .env-{fuji,main}

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,11 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+[rpc_endpoints]
+main = "${MAIN_RPC_URL}"
+apow = "${APOW_RPC_URL}"
+
+[etherscan]
+main = { key = "${ETHERSCAN_API_KEY}", url = "${VERIFIER_URL}" }
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
